<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">ID Pelanggan</string>
    <string name="card_data_pelanggan">ID Nama</string>
    <string name="card_data_alamat">ID Alamat</string>
    <string name="card_data_Nohp">ID No HP</string>
    <string name="card_data_terdaftar">ID Terdaftar</string>
    <string name="card_data_hubungi">ID Hubungi</string>
    <string name="card_data_lihat">ID Lihat</string>
    <string name="tambah_pelanggan">ID Simpan</string>
    <string name="tambah_pelanggan_judul">ID Judul</string>
    <string name="tambah_pelanggan_nama">ID Nama</string>
    <string name="tambah_pelanggan_alamat">ID Alamat</string>
    <string name="tambah_pelanggan_no">ID No HP</string>
    <string name="card_data_pegawai">ID Judul</string>
    <string name="card_data_pegawai_cabang">ID Cabang</string>
    <string name="tambah_pegawai">ID Judul</string>
    <string name="tambah_layanan">ID Judul</string>
    <string name="validasi_nama_pelanggan">ID Tidak Boleh Kosong</string>
    <string name="validasi_alamat_pelanggan">Tidak Boleh Kosong</string>
    <string name="validasi_nohp_pelanggan">Tidak Boleh Kosong</string>
    <string name="validasi_cabang_pelanggan">Tidak Boleh Kosong</string>
    <string name="tambah_pelanggan_sukses">Berhasil</string>
    <string name="tambah_pelanggan_gagal">Gagal</string>
    <string name="card_data_pegawai_nama">ID Nama</string>
    <string name="card_data_pegawai_alamat">ID Alamat</string>
    <string name="card_data_pegawai_nohp">ID No HP</string>
    <string name="card_data_pegawai_terdaftar">ID Cabang</string>
    <string name="card_data_pegawai_hubungi">ID Hubungi</string>
    <string name="card_data_pegawai_lihat">ID Lihat</string>
    <string name="tambah_pegawai_nama">ID Nama</string>
    <string name="tambah_pegawai_alamat">ID Alamat</string>
    <string name="tambah_pegawai_nohp">ID No Hp</string>
    <string name="tambah_pegawai_cabang">ID Cabang</string>
    <string name="tambah_pegawai_simpan">ID Simpan</string>
    <string name="validasi_nama_pegawai">ID Tidak Boleh Kosong</string>
    <string name="validasi_alamat_pegawai">Tidak Boleh Kosong</string>
    <string name="validasi_nohp_pegawai">Tidak Boleh Kosong</string>
    <string name="validasi_cabang_pegawai">Tidak Boleh kosong</string>
    <string name="tambah_pegawai_sukses">Berhasil</string>
    <string name="tambah_pegawai_gagal">Gagal</string>
    <string name="validasi_terdaftar_pegawai">Tidak Boleh Kosong</string>
    <string name="tambah_pegawai_terdaftar">ID Terdaftar</string>
    <string name="tambah_pelanggan_baru_terdaftar">ID Terdaftar</string>
    <string name="validasi_terdaftar_pelanggan">Tidak Boleh Kosong</string>
    <string name="tambah_layanan_harga">ID Harga</string>
    <string name="tambah_layanan_cabang">ID Cabang</string>
    <string name="tambah_layanan_nama">ID Nama Layanan</string>
    <string name="validasi_nama_layanan">validasi_nama_layanan</string>
    <string name="validasi_nama_cabang">validasi_nama_cabang</string>
    <string name="validasi_harga_layanan">Cantumkan Harga</string>
    <string name="tambah_layanan_simpan">Simpan Data</string>
    <string name="tambah_layanan_gagal">Gagal Simpan</string>
    <string name="card_data_layanan_id">ID Layanan</string>
    <string name="card_data_layanan_nama">Tidak Boleh Kosong</string>
    <string name="card_data_layanan_harga">Tidak Boleh Kosong</string>
    <string name="card_data_layanan_cabang">Tidak Boleh Kosong</string>
    <string name="card_data_laporan_nama">Tidak Boleh Kosong</string>
    <string name="card_data_laporan_terdaftar">Terisi Otomatis</string>
    <string name="card_data_laporan_status">Status Pembayaran</string>
    <string name="card_data_laporan_layanan">Tidak Boleh Kosong</string>
    <string name="card_data_laporan_harga">Tidak Boleh kosong</string>
    <string name="card_data_laporan_pembayaran">Pembayaran</string>
    <string name="card_data_laporan_lainnya">Isi jika perlu</string>
    <string name="validasi_nama_tambahkan">Tidak boleh kosong</string>
    <string name="validasi_harga_tambahkan">Tidak boleh kosong</string>
    <string name="card_data_tambahkan_id">ID Tambahkan</string>
    <string name="card_data_tambahkan_nama">Tidak Boleh Kosong</string>
    <string name="card_data_tambahkan_harga">Tidak Boleh Kosong</string>
    <string name="tambah_tambahan">Judul</string>
    <string name="tambahan_nama">Isikan Tambahan</string>
    <string name="tambahan_harga">Isikan Harga</string>
    <string name="card_data_cabang_id">ID Cabang</string>
    <string name="card_data_cabang_nama">Isi nama cabang</string>
    <string name="card_data_cabang_alamat">Isikan alamat cabang</string>
    <string name="tambah_cabang">judul</string>
    <string name="tambah_nama_cabang">Isikan Nama Cabang</string>
    <string name="tambah_alamat_cabang">Isikan alamat cabang</string>
    <string name="validasi_alamat_cabang">Tidak Boleh Kosong</string>
    <string name="tambah_cabang_simpan">Simpan</string>
    <string name="dialog_pelanggan_detail">Detail</string>
    <string name="dialog_pelanggan_nama">Nama</string>
    <string name="dialog_pelanggan_id">Id</string>
    <string name="dialog_pelanggan_alamat">Alamat</string>
    <string name="dialog_pelanggan_nomer">Nomor</string>
    <string name="dialog_pelanggan_terdaftar">waktu</string>
    <string name="dialog_pegawai_detail">detail</string>
    <string name="dialog_pegawai_id">ID</string>
    <string name="dialog_pegawai_nama">Nama</string>
    <string name="dialog_pegawai_alamat">Alamat</string>
    <string name="dialog_pegawai_nomor">Nomor</string>
    <string name="dialog_pegawai_cabang">Cabang</string>
    <string name="dialog_pegawai_terdaftar">Terdaftar</string>
    <string name="button_sunting">Edit</string>
    <string name="button_hapus">Hapus</string>
    <string name="pembayaran_judul">bayar</string>
    <string name="pilih_metode_pembayaran">metode</string>
    <string name="button_batal">Batal</string>
    <string name="hubungi_pelanggan">hubungi</string>
    <string name="Hubungi_pegawai">hubungi</string>
    <string name="metode_hubungi">metode</string>
    <string name="button_telfon">Telepon</string>
    <string name="judul_pelanggan">Judul</string>
    <string name="judul_layanan">Judul</string>
    <string name="pilih_pelanggan">pilih</string>
    <string name="pilih_layanan">pilih</string>
    <string name="judul_tambahan">Judul</string>
    <string name="button_tambahkan">Tambahan</string>
    <string name="button_proses">Proses</string>
    <string name="id_transaksi">ID</string>
    <string name="pelanggan_transaksi">nama</string>
    <string name="tanggal_transaksi">tanggal</string>
    <string name="pegawai_transaksi">nama</string>
    <string name="rincian_tambahan">tambahan</string>
    <string name="subtotal">subtotal</string>
    <string name="Total">Total</string>
    <string name="buttun_wa">wa</string>
    <string name="button_cetak">cetak</string>
    <string name="button_home">home</string>
    <string name="sapaan_register">sapaan</string>
    <string name="anjuran_register">anjuran</string>
    <string name="password_register">password</string>
    <string name="button_register">Daftar</string>
    <string name="anjuran_login">anjuran</string>
    <string name="button_login">login</string>
    <string name="anjuran_register_login">anjuran</string>
    <string name="judul_konfirmasi">judul</string>
    <string name="button_bayar">bayar</string>
    <string name="button_keluar">button</string>
    <string name="sapaan_main">sapaan</string>
    <string name="tanggal_main">tanggal</string>
    <string name="moto_main">moto</string>
    <string name="harapan_main">harapan</string>
    <string name="estimasi">estimasi</string>
    <string name="transaksi">transaksi</string>
    <string name="pelanggan">pelanggan</string>
    <string name="laporan">laporan</string>
    <string name="akun">akun</string>
    <string name="layanan">layanan</string>
    <string name="tambahan">tambahan</string>
    <string name="pegawai">pegawai</string>
    <string name="cabang">cabang</string>
    <string name="printer">printer</string>
    <string name="masukkan_nama">nama</string>
    <string name="masukkan_nomor">nomr</string>
    <string name="masukkan_sandi">sandi</string>
    <string name="masukkan_alamat">alamat</string>
    <string name="masukkan_cabang">cabang</string>
    <string name="masukkan_layanan">layanan</string>
    <string name="masukkan_harga">harga</string>
    <string name="masukkan_tambahan">tambahan</string>
    <string name="greeting_morning">pagi</string>
    <string name="greeting_afternoon">siang</string>
    <string name="greeting_evening">sore</string>
    <string name="greeting_night">malam</string>
    <string name="belum_dibayar">belum</string>
    <string name="bayar_nanti">nanti</string>
    <string name="tunai">langsung</string>
    <string name="belum_diambil">belum_diambil</string>
    <string name="bayar">bayar</string>
    <string name="pesanan_diambil">diambil</string>
    <string name="selesai">selesai</string>
    <string name="tidak_ada">tambahan</string>
    <string name="tambahan_lainnya">tambahan</string>
    <string name="diambil_pada">waktu</string>
    <string name="lengkapi_data">pilih</string>
    <string name="dipilih">layanan</string>
    <string name="tambahkan">tambahan</string>
    <string name="sudah_ada">ada</string>
    <string name="tersimpan">simpan</string>
    <string name="gagal">gagal</string>
    <string name="izin">izin</string>
    <string name="cetak">cetak</string>
    <string name="gagal_cetak">gagal</string>
    <string name="tidak_ditemukan">tidak</string>
    <string name="izin_cetak">cetak</string>
    <string name="tidak_blou">tidak</string>
    <string name="blu">blu</string>
    <string name="blu_tolak">tolak</string>
    <string name="gagal_transaksi">gagal</string>
    <string name="satu_tambahan">tambahan</string>
    <string name="pembayaran_berhasil">berhasil</string>
    <string name="gagal_perbarui">gagal</string>
    <string name="sudah_diambil">diambil</string>
    <string name="gagal_status">gagal</string>
    <string name="hp">hp</string>
    <string name="berhasil_regis">regis</string>
    <string name="gagal_simpan">gagal</string>
    <string name="gagal_nomor">gagl</string>
    <string name="sudah_diisi">sudah</string>
    <string name="login">berhasil</string>
    <string name="password">salah</string>
    <string name="tidak">tidak</string>
    <string name="gagal_login">gagal</string>
    <string name="data_tidak_ditemukan">tidak</string>
    <string name="gagal_ambil_data">gagal</string>
    <string name="semua">semua</string>
    <string name="sudah_digunakan">sudah</string>
    <string name="berhasil">berhasil</string>
    <string name="simpan">simpan</string>
    <string name="judul">judul</string>
    <string name="data_tidak_ada">tidak ada</string>
</resources>