<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    android:id="@+id/main"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_card_pegawai_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_data_pegawai"
            android:textStyle="bold"
            android:background="@drawable/rounded"
            android:paddingStart="10dp"
            android:layout_marginTop="5dp"
            android:paddingTop="5dp"/>
        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_data_pegawai_nama"
            android:paddingStart="10dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/tv_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_data_pegawai_alamat"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_data_pegawai_cabang"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:id="@+id/tv_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_data_pegawai_nohp"
            android:paddingStart="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginTop="5dp"
            />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:rowCount="2"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">

            <Button
                android:id="@+id/bt_hubungi"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/card_data_pegawai_hubungi"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="#B2C8DF"
                />
            <Button
                android:id="@+id/bt_lihat"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:text="@string/card_data_pegawai_lihat"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="5dp"
                android:backgroundTint="#A1E3F9"
                />
        </GridLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>