<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/desain"
    tools:context="pegawai.tambah_pegawai_Activity">


    <TextView
        android:id="@+id/tv_tambah_pegawai"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pegawai"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#ffff"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tv_namalengkap"
        android:layout_marginBottom="16dp" />
    <TextView
        android:id="@+id/tv_namalengkap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pegawai_nama"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16dp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_tambah_pegawai"
        />
    <EditText
        android:id="@+id/et_namalengkap"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nama"
        android:background="@drawable/retangle"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_namalengkap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />


    <TextView
        android:id="@+id/tv_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pegawai_alamat"
        android:textSize="16dp"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_namalengkap"
        />
    <EditText
        android:id="@+id/et_alamat"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_alamat"
        android:layout_margin="10dp"
        android:background="@drawable/retangle"
        android:padding="12dp"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_alamat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tv_nohp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pegawai_nohp"
        android:layout_margin="10dp"
        android:textSize="16dp"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_alamat"
        />

    <EditText
        android:id="@+id/et_nohp"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_nomor"
        android:maxLength="14"
        android:padding="12dp"
        android:layout_margin="10dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSurface"
        android:background="@drawable/retangle"
        android:inputType="phone"
        app:layout_constraintTop_toBottomOf="@id/tv_nohp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tv_cabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pegawai_cabang"
        android:layout_margin="10dp"
        android:textSize="16dp"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nohp"
        />

    <EditText
        android:id="@+id/et_cabang"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_cabang"
        android:layout_margin="10dp"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:textColor="?attr/colorOnSurface"
        android:background="@drawable/retangle"
        app:layout_constraintTop_toBottomOf="@id/tv_cabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />

    <Button
        android:id="@+id/bt_simpan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pegawai_simpan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="#578FCA"
        app:layout_constraintTop_toBottomOf="@id/et_cabang"
        />

</androidx.constraintlayout.widget.ConstraintLayout>