<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/desain"
    tools:context="layanan.tambah_layanan_Activity">


    <TextView
        android:id="@+id/fab_tambah_layanan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#ffff"
        android:shadowColor="@color/black"
        android:shadowRadius="10"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/tv_nama_layanan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan_nama"
        android:layout_margin="10dp"
        android:textSize="16dp"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/fab_tambah_layanan"
        />
    <EditText
        android:id="@+id/et_nama_layanan"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_layanan"
        android:textColor="?attr/colorOnSurface"
        android:layout_margin="10dp"
        android:background="@drawable/retangle"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_nama_layanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tv_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan_harga"
        android:layout_margin="10dp"
        android:textColor="?attr/colorOnSurface"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/et_nama_layanan"
        />
    <EditText
        android:id="@+id/et_harga"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_harga"
        android:background="@drawable/retangle"
        android:padding="12dp"
        android:layout_margin="10dp"
        android:textColor="?attr/colorOnSurface"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/tv_harga"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />

    <TextView
        android:id="@+id/tv_cabang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tambah_layanan_cabang"
        android:layout_margin="10dp"
        android:textSize="16dp"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/et_harga"
        />
    <EditText
        android:id="@+id/et_cabang"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/masukkan_cabang"
        android:layout_margin="10dp"
        android:background="@drawable/retangle"
        android:textColor="?attr/colorOnSurface"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_cabang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="12dp" />


    <Button
        android:id="@+id/bt_simpan_layanan"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/tambah_pelanggan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:backgroundTint="#578FCA"
        app:layout_constraintTop_toBottomOf="@id/et_cabang"
        />

</androidx.constraintlayout.widget.ConstraintLayout>